--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                         <div class="publication-links">
                             <!-- Arxiv PDF link -->
                             <span class="link-block">
-                        <a href="https://openaccess.thecvf.com/content/CVPR2025/papers/Shao_PURA_Parameter_Update-Recovery_Test-Time_Adaption_for_RGB-T_Tracking_CVPR_2025_paper.pdf"
+                        <a href="javascript:void(0);"
                            class="external-link button is-normal is-rounded is-dark">
                         <span class="icon">
                           <i class="fas fa-file-pdf"></i>
@@ -100,7 +100,7 @@
 
                             <!-- Github link -->
                             <span class="link-block">
-                    <a href="javascript:void(0);"
+                    <a href="https://github.com/dongdong2061/QSTNet"
                        class="external-link button is-normal is-rounded is-dark">
                     <span class="icon">
                       <i class="fab fa-github"></i>
