--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
         <div class="hero-body">
             <video poster="" id="tree" autoplay controls muted loop height="100%">
                 <!-- Your video here -->
-                <source src="https://github.com/zhaodongAH/QSTNet/blob/master/static/videos/video.mp4"
+                <source src="static/videos/video.mp4"
                         type="video/mp4">
             </video>
 <!--            <h2 class="subtitle has-text-centered"></h2>-->
@@ -347,4 +347,5 @@
 
 </body>
 </html>
+
 
